--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Color Scroller</title>
 	<meta charset="UTF-8">
 	<style type="text/css">
 		body {
@@ -32,6 +32,11 @@
 		</style>
 		<br>
 		<p>Color Scroller uses no flash whatsoever, but a html marquee tag as well as colored div tags to create this object which is a perfect addition to websites involving content for kids, like kid's games e.t.c.</p>
+		<br>
+		<div style="font-size: 20px;">
+		<pre style='color:#d1d1d1;background:#000000;'><span style='color:#ff8906;'>&lt;</span><span style='color:#e66170; font-weight:bold; '>iframe</span> src<span style='color:#d2cd86; '>=</span><span style='color:#00c4c4; '>"https://kyuccode.github.io/color-scroller/embed.html"</span> width<span style='color:#d2cd86; '>=</span><span style='color:#00c4c4; '>"100%"</span> height<span style='color:#d2cd86; '>=</span><span style='color:#00c4c4; '>"100px"</span> style<span style='color:#d2cd86; '>=</span><span style='color:#00c4c4; '>"</span><span style='color:#904050; '>border</span><span style='color:#d2cd86; '>:</span>none<span style='color:#b060b0; '>;</span><span style='color:#00c4c4; '>"</span><span style='color:#ff8906; '>></span>
+</pre>
+</div>
 		</div>
 	</center>
 </body>
